...
            Personal account
          </Text>
        </View>

        <View style={styles.section}>
          <Text style={[Typography.h3, styles.sectionTitle]}>My Account</Text>
          <SectionItem iconFamily="Feather" iconName="help-circle" title="Help & Support" onPress={() => navigation.navigate("HelpAndSupport")} />
        </View>

        <View style={styles.section}>
          <Text style={[Typography.h3, styles.sectionTitle]}>Settings</Text>
          <SectionItem
            iconFamily="Feather"
...
